--- a/app.json
+++ b/app.json
@@ -6,6 +6,10 @@
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
     "scheme": "workoutmate",
+    "runtimeVersion": "exposdk:52.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/c3105c05-6893-4488-8583-9f95d8b8676a"
+    },
     "userInterfaceStyle": "dark",
     "backgroundColor": "#000000",
     "newArchEnabled": true,
@@ -42,6 +46,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "c3105c05-6893-4488-8583-9f95d8b8676a"
+      }
     }
   }
 }
