--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.13.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
