--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.474.0",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
