--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
@@ -60,8 +61,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-dev-client": "~5.0.12"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
