--- a/package.json
+++ b/package.json
@@ -15,67 +15,71 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@google/genai": "^0.8.0",
     "@gorhom/bottom-sheet": "^5.1.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-menu/menu": "^1.2.2",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "@salmonco/react-native-radar-chart": "^0.0.26",
     "@supabase/supabase-js": "^2.48.1",
-    "expo": "~52.0.28",
-    "expo-auth-session": "~6.0.3",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-navigation-bar": "~4.0.7",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
-    "lucide-react-native": "^0.474.0",
+    "expo": "^53.0.7",
+    "expo-auth-session": "~6.1.5",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.5",
+    "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-navigation-bar": "~4.2.4",
+    "expo-router": "~5.0.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
+    "lucide-react-native": "^0.500.0",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react": "^19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "^0.79.2",
     "react-native-calendars": "^1.1308.1",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~53.0.4",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
+  },
+  "resolutions": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "private": true
 }
