--- a/app.json
+++ b/app.json
@@ -71,7 +71,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/logo.png"
     },
     "plugins": [
