--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/react": "^1.2.12",
     "@expo/vector-icons": "^14.1.0",
     "@google/genai": "^0.8.0",
     "@gorhom/bottom-sheet": "^5.1.1",
@@ -25,9 +27,11 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "@rneui/themed": "^4.0.0-rc.8",
     "@salmonco/react-native-radar-chart": "^0.0.26",
+    "@stardazed/streams-text-encoding": "^1.0.2",
     "@supabase/supabase-js": "^2.48.1",
+    "@ungap/structured-clone": "^1.3.0",
+    "ai": "^4.3.16",
     "expo": "^53.0.7",
     "expo-auth-session": "~6.1.5",
     "expo-blur": "~14.1.4",
@@ -45,7 +49,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
-    "lucide-react-native": "^0.500.0",
+    "lucide-react-native": "^0.513.0",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "^19.0.0",
@@ -55,7 +59,6 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -65,7 +68,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -74,7 +78,6 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.4",
-    "react-test-renderer": "18.3.1",
     "typescript": "~5.8.3"
   },
   "resolutions": {
