--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "react-native-webview": "13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "^3.4.17",
-    "zod": "^3.25.51"
+    "zod": "^3.25.51",
+    "expo-camera": "~16.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
